--- a/index.html
+++ b/index.html
@@ -8,25 +8,27 @@
 
   <link href="https://fonts.googleapis.com/css?family=Roboto|Rubik" rel="stylesheet">
   <link rel="stylesheet" href="css/index.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@500&family=Rubik:wght@500&display=swap" rel="stylesheet">
 
 </head>
 
 <div class="container">
-<header>
-    <div class="logo">
-        <img src="img/lambda-black.png" alt="lambda logo black">
-    </div>
-    <div class="nav">
-        <!-- <img src="img/lambda-black.png" alt="lambda logo black"> -->
-        <a href="index.html">Home</a>
-        <a href="about.html">About</a>
-        <a href="#">Products</a>
-        <a href="#">Blog</a>
-        <a href="#">Contact</a>
-    </div>
-    <div class="jumboImg">
-    </div>
-</header>
+    <header>
+        <div class="logo">
+            <img src="img/lambda-black.png" alt="lambda logo black">
+        </div>
+        <div class="nav">
+            <a href="index.html">Home</a>
+            <a href="about.html">About</a>
+            <a href="#">Products</a>
+            <a href="#">Blog</a>
+            <a href="#">Contact</a>
+        </div>
+        <div class="jumboImg">
+        </div>
+    </header>
 </div>
 
 <body>
